--- a/lib/generators/showbuilder/scaffold/templates/show.html.slim
+++ b/lib/generators/showbuilder/scaffold/templates/show.html.slim
@@ -1,11 +1,4 @@
-p#notice = notice
-
+= show_model_view @<%= singular_name %> do |view|
 <% attributes.each do |attribute| -%>
-p
-  strong <%= attribute.human_name %>:
-  = @<%= singular_table_name %>.<%= attribute.name %>
+  = view.show_text :<%=attribute.name %>
 <% end -%>
-
-= link_to 'Edit', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>)
-'|
-= link_to 'Back', <%= index_helper %>_path
