--- a/lib/generators/showbuilder/scaffold/templates/_form.html.slim
+++ b/lib/generators/showbuilder/scaffold/templates/_form.html.slim
@@ -1,14 +1,7 @@
-= form_for @<%= singular_table_name %> do |f|
-  - if @<%= singular_table_name %>.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@<%= singular_table_name %>.errors.count, "error")} prohibited this <%= singular_table_name %> from being saved:"
-      ul
-        - @<%= singular_table_name %>.errors.full_messages.each do |message|
-          li = message
-
-<% attributes.each do |attribute| -%>
-  .field
-    = f.label :<%= attribute.name %>
-    = f.<%= attribute.field_type %> :<%= attribute.name %>
-<% end -%>
-  .actions = f.submit 'Save'
+= show_model_form [:admin, @<%= singular_name %>] do |form|
+  .well
+  <% attributes.each do |attribute| -%>
+    = form.show_text_input :<%=attribute.name %>
+  <% end -%>
+  div class="form-actions toolbar well"
+    = form.show_form_button :save, :class => 'btn btn-primary'
